# ai-agent-v2

./: .env.example  .gitignore  function_call.py  function_call_anime.py  function_call_bike.py  main.py  message_db.py  pyproject.toml  rag.py  rag_pdf.py  rag_search.py  rag_tooluse.py
lib/: __init__.py  config.py  message_db.py  qdrant_db.py
tools/: __init__.py  anime.py  bike.py  netfilx.py
utils/: spinner.py  text.py
