[project]
name = "ai-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "halo>=0.0.31",
    "openai>=1.75.0",
    "requests>=2.32.3",
    "tinydb>=4.8.2",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
